# attractor

./: pyproject.toml
examples/: branching.dot  simple.dot
src/attractor/: __init__.py  cli.py
src/attractor/agent/: events.py  session.py  truncation.py
src/attractor/agent/execution/: base.py  docker.py  local.py  ssh.py
src/attractor/agent/profiles/: anthropic.py  base.py  gemini.py  openai.py
src/attractor/agent/tools/: core.py  registry.py  subagent.py
src/attractor/llm/: catalog.py  client.py  high_level.py  types.py
src/attractor/llm/adapters/: anthropic.py  base.py  gemini.py  openai.py  openai_compatible.py
src/attractor/pipeline/: artifacts.py  conditions.py  context.py  engine.py  events.py  graph.py  interviewer.py  parser.py  server.py  stylesheet.py  transforms.py  validation.py
src/attractor/pipeline/handlers/: __init__.py  base.py  codergen.py  conditional.py  exit_handler.py  fan_in.py  human.py  manager.py  parallel.py  start.py  tool_handler.py
tests/: test_agent.py  test_conditions.py  test_engine.py  test_llm_types.py  test_parser.py  test_server.py  test_validation.py
